fixed the horizontal scrolling issue...i think

--- a/static/css/blog.css
+++ b/static/css/blog.css
@@ -12,7 +12,7 @@
     background-color: blue;
     margin-top: 0;
     margin-left: auto;
-    padding: 20px 20px 30px 20px;
+    padding: 20px 20px 30px 200px; 
 }
 
 .page-header h1 a:hover, .page-header h1 a:active{
